--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Hello Rails!</h1>
+<h1>Hello World!</h1>
+<h2>Posts about anything on your mind!<h2>
+	
 <%= link_to "My Blog", controller: "posts" %>
